# mimir

./: .gitignore  Cargo.toml  README.md  test_data.json
completions/: _mimir  mimir.bash  mimir.fish
docs/: commands.md
src/: cli.rs  config.rs  context.rs  errors.rs  main.rs  models.rs  storage.rs  utils.rs
src/commands/: add.rs  complete.rs  completions.rs  config.rs  file.rs  files.rs  mod.rs  open.rs  show.rs  subject.rs  task.rs  tasks.rs  workspace.rs
src/storage/: files.rs  mod.rs  schema.rs  subjects.rs  tasks.rs
