[package]
name = "mimir"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
fs = "0.0.5"
clap_complete = "4.5"
anyhow = "1.0.100"
dirs = "6.0.0"
walkdir = "2.5.0"
rusqlite = "0.38.0"
thiserror = "2.0.17"
colored = "3.0.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
